infra/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-samoz
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: Exact
            backend:
              service:
                name: api-service
                port:
                  number: 3000
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
